CANDLEPIN-793: Removed CandlepinQuery from AHC.listAll and listAllByIds
- Updated AbstractHibernateCurator.listAll and .listAllByIds to return a List
  instead of the deprecated CandlepinQuery
- Updated implementation of AbstractHibernateCurator.listAll and .listAllByIds
  to use JPA criteria instead of the deprecated Hibernate criteria and
  CandlepinQuery
- Updated affected callers with logic utilizing Java collection functionality
- Removed CandepinQueryInterceptorTest now because it relied on the
  listAll method in its CandlepinQuery form. It was already slated for removal
  in this transition.